--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,29 @@
 p {
   font-family: Lato;
 }
+
+.flex-labels {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-labels label {
+  padding-top: 4px;
+}
+
+.invalid {
+  color: rgb(255, 59, 98);
+}
+
+.touched {
+  color: rgb(23, 53, 134);
+}
+
+.dirty {
+  color: rgb(58, 22, 5);
+}
+
+.error {
+  color: red;
+  font-weight: 700;
+}
