--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       isError: {{ nameIdealistic | errorIdealistic }}</label
     >
     <small>This should show error, if touched and/or dirty and empty.</small>
-    <small>Pipe doesn't pick up change, because the formControl is initialized, and the object reference is not changed, if invalid, dirty or touched changes.</small>
+    <small>Pipe doesn't pick up change, because the FormControl is initialized, and the object reference is not changed, if invalid, dirty or touched changes.</small>
     <a href="https://stackoverflow.com/a/34497504/19412879">stackoverflow</a>
   </div>
 </form>
